[gd_scene load_steps=5 format=3 uid="uid://dr3bqy1psa83s"]

[ext_resource type="Script" path="res://minigames/find_the_ball/find_the_ball.gd" id="1_26u7a"]
[ext_resource type="Texture2D" uid="uid://1fwgdjumybyl" path="res://minigames/find_the_ball/ball.png" id="2_vmh70"]
[ext_resource type="Texture2D" uid="uid://bo3tpvhdu4h60" path="res://minigames/find_the_ball/cup.png" id="3_r01na"]
[ext_resource type="Texture2D" uid="uid://briyuxl7eadop" path="res://minigames/find_the_ball/table.png" id="4_nb0cd"]

[node name="find_the_ball" type="Node2D"]
script = ExtResource("1_26u7a")
max_moves = 10
speed = 0.2

[node name="Ball" type="Sprite2D" parent="."]
position = Vector2(903, 629)
scale = Vector2(3, 3)
texture = ExtResource("2_vmh70")

[node name="Cup" type="TextureButton" parent="." groups=["cup"]]
offset_left = 335.0
offset_top = 257.0
offset_right = 450.0
offset_bottom = 362.0
scale = Vector2(2, 2)
texture_normal = ExtResource("3_r01na")
texture_pressed = ExtResource("3_r01na")

[node name="Cup2" type="TextureButton" parent="." groups=["cup"]]
offset_left = 785.0
offset_top = 257.0
offset_right = 900.0
offset_bottom = 362.0
scale = Vector2(2, 2)
texture_normal = ExtResource("3_r01na")
texture_pressed = ExtResource("3_r01na")

[node name="Cup3" type="TextureButton" parent="." groups=["cup"]]
offset_left = 1235.0
offset_top = 257.0
offset_right = 1350.0
offset_bottom = 362.0
scale = Vector2(2, 2)
texture_normal = ExtResource("3_r01na")
texture_pressed = ExtResource("3_r01na")

[node name="Table" type="Sprite2D" parent="."]
position = Vector2(895, 868)
texture = ExtResource("4_nb0cd")

[node name="Label" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
